--- a/src/main/resources/templates/mail/simple-link.html
+++ b/src/main/resources/templates/mail/simple-link.html
@@ -8,8 +8,8 @@
 
 <body>
 <main>
-    <p>Hello <span th:text="${username}"></span>.</p>
-    <h6 th:text="${message}">message</h6>
+    <h4>Hello <span th:text="${username}"></span>.</h4>
+    <h5 th:text="${message}">message</h5>
     <div>
         <small th:text="${host + link}"></small>
     </div>
