--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -24,10 +24,9 @@
        role="tab" aria-controls="v-pills-settings-account" aria-selected="false" th:text="#{account}">account</a>
 </div>
 
-<div th:fragment="party-banner" th:if="${party.useBanner}" class="row" id="party-logo">
+<div th:fragment="party-banner" th:if="${party.useBanner}" class="row-cols-1" id="party-logo">
     <img th:src="${party.image}"/>
 </div>
-
 
 <div th:fragment="party-info-menu(partyMenu)" class="bg-light">
     <div class="row pt-4 mx-5">
@@ -58,16 +57,8 @@
     <div class="row mx-5">
         <div class="col-md-10">
             <p>
-                <span th:each="tag: ${party.tags}" class="font-weight-light text-monospace badge badge-pill badge-info mr-3">
-                    <a th:href="@{'/search/tag/' + ${tag.title}}" class="text-decoration-none text-white">
-                        <i class="fa fa-tag"></i> <span th:text="${tag.title}">Tag</span>
-                    </a>
-                </span>
-                <span th:each="zone: ${party.zones}" class="font-weight-light text-monospace badge badge-primary mr-3">
-                    <a th:href="@{'/search/zone/' + ${zone.id}}" class="text-decoration-none text-white">
-                        <i class="fa fa-globe"></i> <span th:text="${zone.city}">City</span>
-                    </a>
-                </span>
+                <span th:replace="fragments.html :: party-tags"></span>
+                <span th:replace="fragments.html :: party-zones"></span>
             </p>
         </div>
     </div>
@@ -87,17 +78,20 @@
     </nav>
 </div>
 
-<div th:fragment="member-list (members, isManager)" class="row px-3 justify-content-center">
-    <ul class="list-unstyled col-10">
-        <li class="media mt-3" th:each="member: ${members}">
-            <svg th:if="${#strings.isEmpty(member?.profileImage)}" th:data-jdenticon-value="${member.username}" width="64" height="64" class="rounded border bg-light mr-3"></svg>
-            <img th:if="${!#strings.isEmpty(member?.profileImage)}" th:src="${member?.profileImage}" width="64" height="64" class="rounded border mr-3"/>
-            <div class="media-body">
-                <h5 class="mt-0 mb-1"><span th:text="${member.username}"></span> <span th:if="${isManager}" class="badge badge-primary">Manager</span></h5>
-                <span th:text="${member.bio}"></span>
-            </div>
-        </li>
-    </ul>
+<div th:fragment="member-list (members, isManager)" class="px-3">
+    <div class="d-flex mt-3" th:each="member: ${members}">
+        <div class="flex-shrink-0">
+            <svg th:if="${#strings.isEmpty(member?.profileImage)}" th:data-jdenticon-value="${member.username}" width="64" height="64" class="rounded border"></svg>
+            <img th:if="${!#strings.isEmpty(member?.profileImage)}" th:src="${member?.profileImage}" width="64" height="64" class="rounded border"/>
+        </div>
+        <div class="flex-grow-1 ms-3">
+            <h5>
+                <span th:text="${member.username}"></span>
+                <span th:if="${isManager}" class="badge bg-warning">Manager</span>
+            </h5>
+            <span th:text="${member.bio}"></span>
+        </div>
+    </div>
 </div>
 
 <div th:fragment="party-settings-menu (currentMenu)" class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
@@ -125,18 +119,6 @@
     </button>
 </div>
 
-<div th:fragment="member-list (members, isManager)" class="row px-3 justify-content-center">
-    <ul class="list-unstyled col-10">
-        <li class="media mt-3" th:each="member: ${members}">
-            <svg th:if="${#strings.isEmpty(member?.profileImage)}" th:data-jdenticon-value="${member.username}" width="64" height="64" class="rounded border bg-light mr-3"></svg>
-            <img th:if="${!#strings.isEmpty(member?.profileImage)}" th:src="${member?.profileImage}" width="64" height="64" class="rounded border mr-3"/>
-            <div class="media-body">
-                <h5 class="mt-0 mb-1"><span th:text="${member.username}"></span> <span th:if="${isManager}" class="badge badge-primary">Manager</span></h5>
-                <span th:text="${member.bio}"></span>
-            </div>
-        </li>
-    </ul>
-</div>
 
 <div th:fragment="event-form (mode, action)">
     <nav aria-label="breadcrumb">
@@ -216,6 +198,19 @@
     </a>
 </ul>
 
+
+<span th:fragment="party-tags" th:each="tag: ${party.tags}" class="font-monospace badge">
+    <a th:href="@{'/search/tag/' + ${tag.title}}" class="text-decoration-none text-info">
+        <i class="fa fa-tag"></i> <span th:text="${tag.title}">Tag</span>
+    </a>
+</span>
+
+<span th:fragment="party-zones" th:each="zone: ${party.zones}" class="font-monospace badge">
+    <a th:href="@{'/search/zone/' + ${zone.id}}" class="text-decoration-none text-secondary">
+        <i class="fa fa-globe"></i> <span th:text="${zone.city}">City</span>
+    </a>
+</span>
+
 <div th:fragment="party-list (partyList)" class="album py-5">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col" th:each="party: ${partyList}">
@@ -228,11 +223,8 @@
                     </a>
                     <p class="card-text" th:text="${party.shortDescription}">Short description</p>
                     <p class="card-text context">
-                        <span th:each="tag: ${party.tags}" class="font-weight-light text-monospace badge badge-pill badge-info mr-3">
-                            <a th:href="@{'/search/tag/' + ${tag.title}}" class="text-decoration-none text-white">
-                                <i class="fa fa-tag"></i> <span th:text="${tag.title}">Tag</span>
-                            </a>
-                        </span>
+                        <div th:replace="fragments.html :: party-tags"></div>
+                        <div th:replace="fragments.html :: party-zones"></div>
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                         <!--<div class="btn-group">
