--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -80,6 +80,7 @@
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li><h6 class="dropdown-header">Account</h6></li>
                             <li><a class="dropdown-item" href="#" th:href="@{'/profile/' + ${#authentication.name}}">Profile</a></li>
+                            <li><a class="dropdown-item" href="#" th:href="@{'/settings/profile'}">Setting</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li>
                                 <form class="form-inline my-lg-0" action="#" th:action="@{/logout}" method="post">
