--- a/src/main/resources/templates/account/send-email-login-link.html
+++ b/src/main/resources/templates/account/send-email-login-link.html
@@ -19,7 +19,9 @@
   </div>
 
   <form class="needs-validation" action="#" th:action="@{/send-email-login-link}" method="post" novalidate>
-    <img class="mb-4" src="/assets/brand/logo-dark.png" alt="" width="160" height="160">
+    <div class="mb-4">
+      <a href="/"><img src="/assets/brand/logo-light.png" alt="" width="160" height="160"></a>
+    </div>
     <h1 class="h3 mb-3 fw-normal">Login with no password</h1>
 
     <div class="form-floating">
