--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,18 +6,19 @@
 </head>
 <body>
     <footer th:fragment="footer-common" class="text-center mt-5">
-        <small>Mouken &copy; 2022</small>
+        <img src="/assets/brand/logo-light-lg.png" alt="" width="96">
+        <small>&copy; 2022</small>
     </footer>
 
     <footer th:fragment="footerParam (param1, param2)">
-        <p>Parammeters</p>
+        <p>Parameters</p>
         <p th:text="${param1}"></p>
         <p th:text="${param2}"></p>
     </footer>
 
     <footer th:fragment="footer-row">
         <div class="row">
-            <!--<img class="mb-2" src="/images/logo_wide.png" alt="" width="96">-->
+            <img class="mb-2" src="/images/logo-lg.png" alt="" width="96">
             <small class="d-block mb-3 text-muted">Mouken &copy; 2022</small>
         </div>
     </footer>
