--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
         <div class="d-lg-none" style="width: 1.5rem;"></div>
 
         <a class="navbar-brand p-0 me-lg-2" href="/" aria-label="Mouken">
-            <img src="/assets/brand/logo-light.png" width="48" height="48">
+            <img src="/assets/brand/logo-light.png" width="40" height="40">
         </a>
 
         <div class="d-flex">
@@ -31,7 +31,7 @@
             </div>
 
             <div class="offcanvas-body p-4 pt-0 p-lg-0">
-                <hr class="d-lg-none text-white-50">
+                <hr class="d-lg-none">
                 <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav mt-1">
                     <li class="nav-item col-6 col-lg-auto">
                         <a class="nav-link" href="#">Docs</a>
