--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Mouken</h1>
-                <p class="lead text-muted">Look for a team you want.</p>
+                <p class="lead text-muted" th:text="#{index.intro}"></p>
                 <p sec:authorize="!isAuthenticated()">
                     <a href="#" th:href="@{/sign-up}" class="btn btn-dark my-2" >Create account</a>
                     <a href="#" th:href="@{/login}" class="btn btn-secondary my-2">Sign in</a>
