--- a/src/main/resources/templates/party/info.html
+++ b/src/main/resources/templates/party/info.html
@@ -8,9 +8,10 @@
 <body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 <div th:replace="fragments.html :: party-banner"></div>
-<div th:replace="fragments.html :: party-info-menu(partyMenu='posts')"></div>
+<div th:replace="fragments.html :: party-info-menu(partyMenu='info')"></div>
 
 <main class="container">
+    <div class="pt-3 justify-content-center" th:utext="${party.fullDescription}"></div>
 </main>
 
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
