--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,9 +6,6 @@
 </head>
 <body>
 
-
-
-
 <header th:fragment="header-common" class="navbar navbar-expand-lg navbar-dark bd-navbar sticky-top" style="background-color: #212529;">
     <nav class="container-xxl flex-wrap flex-md-nowrap" aria-label="Main navigation">
 
@@ -34,10 +31,7 @@
                 <hr class="d-lg-none">
                 <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav mt-1">
                     <li class="nav-item col-6 col-lg-auto">
-                        <a class="nav-link" href="#">Docs</a>
-                    </li>
-                    <li class="nav-item col-6 col-lg-auto">
-                        <a class="nav-link" href="#">Examples</a>
+                        <a class="nav-link" href="#" th:href="@{/admin}" th:text="#{admin}">Admin</a>
                     </li>
                 </ul>
 
