--- a/src/main/resources/static/css/basic.css
+++ b/src/main/resources/static/css/basic.css
@@ -10,7 +10,62 @@ main{
     flex:1;
 }
 footer{
-    background-color: #212529;
+    background-color: #c4d7ec;
     color: white;
     padding:30px 0;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.bg-sky {
+    background-color: #c4d7ec;
+    color: white;
+    text-align: center;
+}
+
+.btn-sky {
+    background-color: #c4d7ec;
+    color: white;
+    text-align: center;
+}
+
+.btn-sky:hover {
+    background-color: white; /* Green */
+    border: 1px solid #c4d7ec;
+    color: #c4d7ec;
+}
+
+.btn-dark-sky {
+    background-color: #a8b6c5;
+    color: white;
+    text-align: center;
+}
+
+.btn-dark-sky:hover {
+    background-color: white; /* Green */
+    border: 1px solid #a8b6c5;
+    color: #a8b6c5;
+}
+
+
+.btn-outline-sky {
+    background-color: white;
+    color: #c4d7ec;
+    border: 1px solid #c4d7ec;
+    text-align: center;
+}
+
+.btn-outline-sky:hover {
+    background-color: #c4d7ec;
+    color: white;
+    text-align: center;
+}
+
+.text-sky {
+    color: #c4d7ec;
 }
