--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title th:text="#{title}">title</title>
 </head>
 
-<body>
+<body class="bg-light">
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
 
@@ -16,7 +16,7 @@
         <a href="#" th:href="@{/check-email}" class="alert-link">Please check your email to confirm.</a>
     </div>
 
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    <!--<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col" th:each="post: ${postList}">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
@@ -41,9 +41,9 @@
                     <div th:replace="fragments.html :: party-zones"></div>
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
-                        <!--<div class="btn-group">
+                        &lt;!&ndash;<div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-secondary">Bookmark</button>
-                        </div>-->
+                        </div>&ndash;&gt;
                         <small class="text-muted">
                             <i class="fa fa-user-circle"></i>
                             <span th:text="${party.memberCount}"></span>
@@ -53,20 +53,21 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
 
     <section class="py-5 text-center">
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">Mouken</h1>
+                <img src="/assets/brand/logo-sky-lg.png" alt="" width="600" class="center">
+                <!--todo delete<h1 class="fw-light">Mouken</h1>-->
                 <p class="lead text-muted" th:text="#{index.intro}"></p>
                 <p sec:authorize="!isAuthenticated()">
-                    <a href="#" th:href="@{/sign-up}" class="btn btn-dark my-2" >Create account</a>
-                    <a href="#" th:href="@{/login}" class="btn btn-secondary my-2">Sign in</a>
+                    <a href="#" th:href="@{/sign-up}" class="btn btn-dark-sky my-2" >Create Account</a>
+                    <a href="#" th:href="@{/login}" class="btn btn-sky my-2">Sign In</a>
                 </p>
                 <p sec:authorize="isAuthenticated()">
-                    <a href="#" th:href="@{/new-party}" class="btn btn-primary my-2" th:text="#{new-party}">new-party</a>
+                    <a href="#" th:href="@{/new-party}" class="btn btn-sky my-2" th:text="#{new-party}">new-party</a>
                     <!--<a href="#" th:href="@{/new-party}" class="btn btn-secondary my-2" th:text="#{new-party}">new-party</a>-->
                     <!--<a href="#" th:href="@{/parties}" class="btn btn-secondary my-2" th:text="#{parties}">parties</a>-->
                 </p>
